# hyliquid

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile.api  Dockerfile.server  Dockerfile.ui  LICENSE  README.bridge.md  README.md  config.toml  docker-compose.yml  llms-full.txt  llms.txt  loop.sh  test.sh  wallet_dc_entrypoint.sh
.github/workflows/: ci.yml  clippy.yml  docker.yml  tests.yml
contracts/: Cargo.toml  build.rs  metadata.rs
contracts/contract1/: Cargo.toml  contract1.img  contract1.txt
contracts/contract1/src/: indexer.rs  lib.rs  main.rs
contracts/contract1/src/client/: tx_executor_handler.rs
contracts/contract1/tests/: integration_tests.rs
contracts/orderbook/: Cargo.toml
contracts/orderbook/benches/: orderbook.rs  orderbook_smt.rs
contracts/orderbook/src/: indexer.rs  lib.rs  main.rs  model.rs  monotree_multi_proof.rs  monotree_proof.rs  order_manager.rs  orderbook.rs  orderbook_state.rs  orderbook_witness.rs  reth.rs  smt_values.rs  tests.rs  transaction.rs  utils.rs
contracts/orderbook/src/client/: tx_executor_handler.rs
contracts/orderbook/src/order_manager/: tests.rs
contracts/orderbook/src/test/: orderbook_tests.rs
contracts/orderbook/src/zk/: commitment_metadata.rs  contract.rs  mod.rs  order_merkle.rs  smt.rs
contracts/orderbook/tests/: zkvm_pipeline.rs
docs/: reth_bridge_testing.md
elf/: orderbook  orderbook_vk
examples/state-example/: Cargo.toml
examples/state-example/src/: generated.rs  main.rs
front/: .env  AGENTS.md  CLAUDE.md  CONFIG.md  README.md  bun.lockb  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
front/public/: config.js
front/src/: App.css  App.tsx  App.vue  OrderbookInterface.css  OrderbookInterface.tsx  SwapInterface.css  SwapInterface.tsx  WalletStyles.css  api_call.ts  config.ts  env.d.ts  index.css  main.ts  main.tsx  style.css  utils.ts
front/src/components/: DepositModal.vue  WithdrawModal.vue  WithdrawOnEthModal.vue
front/src/deposit/: useEthereumBridge.ts  useHyliDeposit.ts
front/src/trade/: Trade.vue  api.ts  mock_api.ts  preferences.ts  trade.ts  trade_api.ts  types.ts  websocket.ts
front/src/trade/components/: BalancesTable.vue  BottomTabs.vue  ChartPlaceholder.vue  FillsTable.vue  InstrumentsPanel.vue  MarketsPanel.vue  OrderForm.vue  Orderbook.vue  OrdersTable.vue  PositionsTable.vue  TopBar.vue
front/src/withdraw/: useHyliWithdraw.ts
grafana/: DatabaseMetrics.json  HttpApiMetrics.json  TracePanel.json
loadtest/: .gitignore  Cargo.toml  README.md  loadtest.toml
loadtest/docker/: docker-compose.yml
loadtest/loadtest_results/: latencies.csv  report.html  summary.json
loadtest/src/: auth.rs  checks.rs  config.rs  http_client.rs  main.rs  metrics.rs  state.rs
loadtest/src/scenarios/: cancellation.rs  maker.rs  mod.rs  setup.rs  taker.rs
macros/state-core/: Cargo.toml
macros/state-core/src/: lib.rs
macros/state-macros/: Cargo.toml
macros/state-macros/src/: lib.rs
macros/state-macros/tests/: vapp_build_witness.rs
monitoring/: docker-compose.yml
monitoring/grafana/provisioning/dashboards/: hyliquid.yaml
monitoring/grafana/provisioning/datasources/: prometheus.yaml
monitoring/prometheus/: prometheus.yml
monitoring/tempo/: tempo.yaml
reth_harness/: Cargo.toml
reth_harness/src/: lib.rs  support.rs  test_erc20_bytecode.hex
scripts/: reth_bridge_roundtrip.sh
server/: .gitignore  AGENTS.md  Cargo.toml
server-api/: .env.example  .gitignore  Dockerfile  README.md  WEBSOCKET.md  package.json  tsconfig.json  websocket-test-client.js
server-api/src/: main.ts
server-api/src/api/: balances.ts  book.ts  chart.ts  config.ts  health.ts  index.ts  info.ts  user.ts  websocket.ts
server-api/src/config/: app.ts  database.ts  index.ts
server-api/src/database/: callbacks.ts  queries.ts  subscription-manager.ts
server-api/src/middleware/: auth.ts  cors.ts  error-handler.ts  index.ts  logger.ts
server-api/src/services/: asset-service.ts  book-service.ts  index.ts  user-service.ts  websocket-service.ts
server-api/src/types/: api.ts  index.ts  orderbook.ts  websocket.ts
server-api/src/utils/: route-info.ts
server/src/: api.rs  app.rs  bridge.rs  conf.rs  conf_defaults.toml  database.rs  init.rs  lib.rs  main.rs  nonce_store.rs  prover.rs  reth_bridge.rs  reth_utils.rs  setup.rs
server/src/bridge/: bridge_state.rs  eth.rs  utils.rs
server/src/migrations/: 1_create_table.sql  2_create_indexes.sql  3_create_assets.sql  4_create_seed_functions.sql  5_blob_tx_outbox.sql  5_read_functions.sql  6_add_reth_collateral_asset.sql  6_indexes_build_state.sql
server/src/services/: asset_service.rs  book_service.rs  bridge_service.rs  mod.rs  user_service.rs
tests/: README.md  bun.lockb  enhanced-server-api.test.js  package.json  security-tests.test.js  server-api.test.js  test-utils.js
