[workspace]
resolver = "2"
members = ["contracts", "contracts/orderbook", "server", "loadtest"]

[workspace.dependencies]
sdk = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-contract-sdk", branch = "rest_traces" }
client-sdk = { git = "https://github.com/hyli-org/hyli.git", default-features = false, package = "hyli-client-sdk", branch = "rest_traces" }
hyli-smt-token = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-smt-token", branch = "rest_traces" }
hyli-modules = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-modules", branch = "rest_traces" }
hyli-net = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-net", branch = "rest_traces" }

sp1-sdk = { version = "5.0.3", default-features = false }
sp1-helper = "5.0.3"
sp1-zkvm = { version = "5.0.3", default-features = false }

contracts = { path = "contracts", default-features = false, package = "contracts" }
orderbook = { path = "contracts/orderbook", package = "orderbook" }
server = { path = "server", default-features = false, package = "server" }

sqlx = { version = "0.8.6", default-features = false }


[workspace.package]
version = "0.4.1"
edition = "2021"

[patch.crates-io]
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
