[package]
name = "contracts"
edition = { workspace = true }
rust-version = "1.81"

[lib]
path = "metadata.rs"

[dependencies]
sdk = { workspace = true }
orderbook = { workspace = true, features = ["sp1"] }
sp1-sdk = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
sp1-sdk = { workspace = true }
serde_json = { version = "1.0.142" }

[features]
default = ["nonreproducible"]
build = []
nonreproducible = []
nobuild = []