[package]
name = "loadtest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loadtest_goose"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
orderbook.workspace = true
sdk.workspace = true
client-sdk.workspace = true
server.workspace = true

# Goose for load testing
goose = "0.18"
goose-eggs = "0.6"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
borsh = "1.5"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Cryptography (reuse from tx_sender)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
hex = "0.4"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and dates
chrono = "0.4"

# CSV export
csv = "1.3"

# Statistics
hdrhistogram = "7.5"

