[package]
name = "reth_harness"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.11", default-features = false, features = ["std"] }
alloy-genesis = { version = "0.3.2", default-features = false, features = ["std"] }
borsh = "1.5.3"
bincode = "1.3.3"
eyre = "0.6.12"
futures-util = "0.3.31"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Reth stack (pin to a known revision)
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "e969262c7ec48f073b8ea7920a75161e7130a98e", features = ["node", "rpc"] }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "e969262c7ec48f073b8ea7920a75161e7130a98e", features = ["test-utils"] }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", rev = "e969262c7ec48f073b8ea7920a75161e7130a98e" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "e969262c7ec48f073b8ea7920a75161e7130a98e" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "e969262c7ec48f073b8ea7920a75161e7130a98e", default-features = false }
