[package]
name = "orderbook"
edition = { workspace = true }
rust-version = "1.81"

[[bin]]
name = "orderbook"
path = "src/main.rs"
required-features = ["sp1"]
test = false

[dependencies]
anyhow = "1.0.96"
sdk = { workspace = true, features = ["tracing", "smt"] }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
borsh = { version = "1.5.7" }
k256 = "0.13.4"
sha2 = "0.10.8"
sparse-merkle-tree = { version = "0.6.1", default-features = false }


sp1-zkvm = { workspace = true, default-features = false, optional = true }
hex = "0.4.3"

sqlx = { workspace = true, optional = true, features = ["derive"] }
sha3 = "0.10.8"

[dev-dependencies]
test-log = { version = "0.2.17", features = [
  "color",
  "trace",
], default-features = false }
# Active client feature for tests
orderbook = { path = "." }
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full", "tracing"] }

[features]
default = []
sp1 = ["dep:sp1-zkvm", "sdk/sp1"]
sqlx = ["dep:sqlx"]
